# pg_bumpers

./: .gitignore  CLAUDE.md  Cargo.toml  KNOWN_BYPASSES.md  KNOWN_DANGERS.md  README.md  deny.toml  rust-toolchain.toml  typos.toml
.github/scripts/: coverage_floor.py
.github/workflows/: ci-extra.yml  ci.yml  pages.yml
crates/applyd/: Cargo.toml
crates/applyd/src/: lib.rs  main.rs  protocol.rs  service.rs
crates/applyd/tests/: applyd_it.rs  service_unit.rs
crates/audit/: Cargo.toml
crates/audit/sql/: 10_audit_meta.sql
crates/audit/src/: anchor.rs  boot.rs  chain.rs  kms.rs  lib.rs  pg.rs  record.rs  sink.rs
crates/audit/tests/: anchor.rs  chain.rs  concurrent_append_it.rs  pg_meta_it.rs  shared_anchor.rs  single_anchor_owner_it.rs
crates/cli/: Cargo.toml
crates/cli/src/: doctor.rs  flow.rs  lib.rs  main.rs  principal.rs  refuse.rs  request.rs  verify.rs  webhook.rs
crates/cli/tests/: approval_flow.rs  doctor_it.rs  keygen.rs  shared_meta_it.rs
crates/clone-orchestrator/: Cargo.toml
crates/clone-orchestrator/examples/: crash_during_basebackup.rs  orphan_orchestrator.rs
crates/clone-orchestrator/src/: apply.rs  apply_grant.rs  conn.rs  dry_run.rs  lib.rs  predicate.rs  proposal.rs  provider.rs  revert.rs
crates/clone-orchestrator/src/provider/: ledger.rs  local.rs  parity.rs
crates/clone-orchestrator/tests/: apply_grant_it.rs  apply_it.rs  clone_governance_it.rs  dry_run_it.rs  revert_it.rs
crates/clone-orchestrator/tests/common/: cluster.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: barrier.rs  blast_radius.rs  clock.rs  inverse.rs  lib.rs  pk_checksum.rs  session.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: applyd.rs  catalog.rs  contract.rs  lib.rs  proxy.rs  server.rs
crates/mcp/tests/: protocol_it.rs  write_path_e2e.rs
crates/pgwire/: Cargo.toml
crates/pgwire/src/: backend.rs  buf.rs  classifier.rs  codec.rs  detector.rs  error.rs  frontend.rs  lib.rs  scram.rs
crates/pgwire/tests/: classifier.rs  codec_async.rs  detector.rs  roundtrip.rs
crates/policy/: Cargo.toml  policy.example.yaml
crates/policy/src/: config.rs  grant.rs  lib.rs  risk.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: budget.rs  config.rs  enforce.rs  explain.rs  lib.rs  main.rs  recorder.rs  session.rs  threaded_sink.rs  tls.rs  window.rs
crates/proxy/tests/: audit_meta_it.rs  proxy_it.rs  readgates_it.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/warden/: Cargo.toml
crates/warden/src/: breaker.rs  lib.rs  main.rs  poller.rs  run.rs  thresholds.rs
crates/warden/tests/: warden_it.rs
dbsafe-bench/: Cargo.toml
dbsafe-bench/golden/: expected_outcomes.json  known_bypasses.json
dbsafe-bench/src/: corpus.rs  floor.rs  golden.rs  lib.rs  runner.rs  verdict.rs
dbsafe-bench/tests/: gate.rs  gate_has_teeth.rs  gate_it.rs
deploy/: README.md  applyd.env.example  down.sh  local-stack.sh  marquee.sh  marquee.transcript.txt  proxy.env.example  up.sh  up.transcript.txt  warden.env.example
deploy/hba/: NETWORK-POLICY.md  pg_hba.agent-boundary.conf.template  render-hba.sh
deploy/init/: 00_README.sql  10_hardened_role.sql  20_demo_seed.sql
deploy/sql/: 21_public_lockdown.sql  check-init-sync.sh
deploy/test/: local_stack_guards.sh  no_node_residuals.sh  wall_matrix.sh
docs/: README.md  architecture.md  components.md  demo.md  development.md  quickstart.md
docs/spec/: SPEC.amendments.md  fidelity-spike-report.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: classifier.rs
mcp/server/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
mcp/server/scripts/: license-check.mjs
mcp/server/src/: applydCore.ts  blockContract.ts  classifier.ts  intent.ts  lazyProxy.ts  pg.d.ts  pgProxy.ts  riskEngine.ts  server.ts  transport.ts
mcp/server/src/testing/: fakes.ts
mcp/server/test/: applyd.integration.test.ts  blockContract.test.ts  injection.test.ts  integration.test.ts  lazyConnect.test.ts  marquee.integration.test.ts  proxyResilience.test.ts  tools.test.ts  units.test.ts  upStack.e2e.test.ts
proto/: README.md
scripts/: build-site.sh
spikes/fidelity/: Cargo.toml
spikes/fidelity/src/: differ.rs  harness.rs  lib.rs
spikes/fidelity/tests/: spike_it.rs
