# pg_bumpers — Cargo workspace root.
# See docs/spec/SPEC.md (v0.8) §3 for the repo layout this mirrors.
[workspace]
resolver = "2"
members = [
    "crates/proxy",
    "crates/warden",
    "crates/core",
    "crates/policy",
    "crates/clone-orchestrator",
    "crates/pgwire",
    "crates/audit",
    "crates/cli",
]

# Shared metadata for every crate in the workspace. Crates opt in via
# `version.workspace = true` etc. so the values live in exactly one place.
[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NikolayS/pg_bumpers"
authors = ["pg_bumpers contributors"]
rust-version = "1.90"
