# pg_bumpers — Cargo workspace root.
# See docs/spec/SPEC.md (v0.8) §3 for the repo layout this mirrors.
[workspace]
resolver = "2"
members = [
    "crates/proxy",
    "crates/warden",
    "crates/core",
    "crates/policy",
    "crates/clone-orchestrator",
    "crates/pgwire",
    "crates/audit",
    "crates/cli",
    # Throwaway S0 fidelity-spike harness (issue #8). publish = false; not
    # production. Kept in the workspace only so it compiles under the fast CI job;
    # its DB tests are env-gated (PG_BUMPERS_IT=1) and skipped by `cargo test`.
    "spikes/fidelity",
]

# Shared metadata for every crate in the workspace. Crates opt in via
# `version.workspace = true` etc. so the values live in exactly one place.
[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NikolayS/pg_bumpers"
authors = ["pg_bumpers contributors"]
rust-version = "1.90"
