# pg_bumpers — Cargo workspace root.
# See docs/spec/SPEC.md (v0.8) §3 for the repo layout this mirrors.
[workspace]
resolver = "2"
members = [
    "crates/proxy",
    "crates/warden",
    "crates/core",
    "crates/policy",
    "crates/clone-orchestrator",
    "crates/pgwire",
    "crates/audit",
    "crates/cli",
    # The write-path daemon (issue #67, S5): a long-lived process owning the
    # propose→dry_run→approve→apply lifecycle over a Unix-domain socket
    # (line-delimited JSON-RPC 2.0), driving the merged grant-gated apply floor
    # (guarded_apply_with_grant). The production analog of the TS FakeCore; the
    # MCP server's ApplydCore wires to it. NOT TCP, NOT agent-reachable.
    # publish = false.
    "crates/applyd",
    # The agent-facing MCP server (EPIC #83): the §4 nine-tool catalog speaking
    # the REAL Model Context Protocol over stdio via the official `rmcp` SDK, so
    # `claude mcp add pg-bumpers -- pgb-mcp` connects to a real Claude Code. This
    # is the Rust replacement for the TS `mcp/server` (consolidation EPIC #83). It
    # is COOPERATIVE, NOT a security boundary (SPEC §3): the deterministic floor
    # (proxy + WALL + applyd + warden) is the real boundary. PR1 = skeleton
    # (handshake + catalog + whoami); read paths land in PR2, writes in PR3.
    # publish = false.
    "crates/mcp",
    # Throwaway S0 fidelity-spike harness (issue #8). publish = false; not
    # production. Kept in the workspace only so it compiles under the fast CI job;
    # its DB tests are env-gated (PG_BUMPERS_IT=1) and skipped by `cargo test`.
    "spikes/fidelity",
    # The deterministic FP/FN floor gate (issue #43; SPEC §3 "Separate:
    # dbsafe-bench", §13.5, §10.6). publish = false; consumes the merged
    # enforcement floor and gates CI on 0 catastrophic FN + 0 FP regression vs a
    # golden file. Its pure-logic gate runs in the fast `cargo test`; DB-backed
    # scenarios are env-gated (PG_BUMPERS_IT=1).
    "dbsafe-bench",
]

# Shared metadata for every crate in the workspace. Crates opt in via
# `version.workspace = true` etc. so the values live in exactly one place.
[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/NikolayS/pg_bumpers"
authors = ["pg_bumpers contributors"]
rust-version = "1.90"
