[package]
name = "pgb-cli"
description = "pg_bumpers CLI binary: operator approval flow issuing signed, single-use, proposal-bound grants."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_cli"
path = "src/lib.rs"

[[bin]]
name = "pgb-cli"
path = "src/main.rs"

[dependencies]
pgb-core = { path = "../core" }
pgb-policy = { path = "../policy" }
# The audit log (hash-chained, append-only). Pure-Rust chain + in-memory sink;
# the Postgres `_meta` sink is behind the default-on `pg` feature there — we use
# only the in-memory sink here, so disable default features to avoid pulling a
# DB client into the CLI binary.
pgb-audit = { path = "../audit", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Ed25519 signing for the approver's audit-key-grade signing key (§10.9). Same
# permissive crate (BSD-3-Clause) the policy grant token already uses.
ed25519-dalek = { version = "2", features = ["rand_core"] }
# RNG for generating the demo signing key in the binary. Same crate/features the
# policy crate's grant tests already use (keeps the tree single-version).
rand_core = { version = "0.6", features = ["getrandom"] }
