[package]
name = "pgb-cli"
description = "pg_bumpers CLI binary: operator approval flow issuing signed, single-use, proposal-bound grants."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_cli"
path = "src/lib.rs"

[[bin]]
name = "pgb-cli"
path = "src/main.rs"

[dependencies]
pgb-core = { path = "../core" }
pgb-policy = { path = "../policy" }
# The audit log (hash-chained, append-only). The `pg` feature pulls in the
# Postgres `_meta` sink + the S5 `AuditBoot` wiring so the CLI approval flow
# hash-chains into the SAME persistent + anchored `_meta` chain as the proxy
# (issue #64); the in-memory `SharedSink` path stays available for the demo.
pgb-audit = { path = "../audit", features = ["pg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Ed25519 signing for the approver's audit-key-grade signing key (§10.9). Same
# permissive crate (BSD-3-Clause) the policy grant token already uses.
ed25519-dalek = { version = "2", features = ["rand_core"] }
# RNG for generating the demo signing key in the binary. Same crate/features the
# policy crate's grant tests already use (keeps the tree single-version).
rand_core = { version = "0.6", features = ["getrandom"] }
# Hex encode the `keygen` seed/pubkey lines (issue #101) — the Rust-native
# replacement for the removed `node -e` keypair generation in deploy/up.sh. Same
# crate/version applyd uses to DECODE PGB_APPROVER_PUBKEY (keeps the tree single-version).
hex = "0.4"

[dev-dependencies]
# The S5 cross-component IT (issue #64) drives a REAL proxy reject (via the proxy
# `Recorder`) and a CLI approve onto ONE shared `_meta` chain, then anchors +
# verifies it. The proxy is a dev-dependency only (no cycle: proxy never depends
# on cli). `postgres` sets up the throwaway `_meta` fixture (env-gated PG18).
pgb-proxy = { path = "../proxy" }
postgres = "0.19"
