[package]
name = "pgb-clone-orchestrator"
description = "pg_bumpers clone-orchestrator: dry-run rehearsal, blast-radius measurement, PK-set guard, typed-inverse."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_clone_orchestrator"
