[package]
name = "pgb-clone-orchestrator"
description = "pg_bumpers clone-orchestrator: dry-run rehearsal, blast-radius measurement, PK-set guard, typed-inverse."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_clone_orchestrator"

[features]
# The real-PG18 connection seams (`conn` module): PgRehearsal — the §12 in-txn
# baseline rehearsal — and PgApplyConn/PgRevertConn — the focused single-int-PK
# UPDATE/DELETE apply + revert conns. Behind a feature so the DB-free build/test
# path needs no Postgres client. The integration tests and `pgb-applyd` enable
# it. These impls were LIFTED from the former `tests/*_it.rs` so there is exactly
# ONE implementation shared by the tests and applyd (no second, unproven copy).
pg = ["dep:postgres"]

[dependencies]
# The merged core seams: BlastRadius (§10.1), PkChecksum/PkSetBuilder (§10.2),
# typed-inverse InverseKind (§10.3), Clock (§10.4). DB-free; the orchestrator
# drives a live connection and folds the measured facts into these types.
pgb-core = { path = "../core" }
# The single policy model — the `clone.provider: none|dblab` selector (§12.2) the
# provider abstraction maps from. No cycle: policy does not depend on this crate.
pgb-policy = { path = "../policy" }
# Advisory SQL parse (§4 "parse advisory only"): classify the proposed write and
# extract its target relation + volatile-function references. Apache-2.0; already
# in the workspace tree (pgwire). Built from the SPEC + the public sqlparser AST
# only — clean-room (no pgDog).
sqlparser = { version = "0.62", features = ["visitor"] }
# §10.1 BlastRadius JSON emission round-trips through serde.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# §14.3 grant consumption at apply (#66): the production apply caller takes the
# approver's Ed25519 VerifyingKey in its signature. The grant CRYPTO (sign/verify,
# binding hash, NonceStore) is REUSED from pgb-policy; this crate only references
# the public key TYPE. Same v2 (BSD-3-Clause) that pgb-policy pins — no second
# crypto impl. Default features off (we only touch the key type), so this adds no
# RNG/serde surface.
ed25519-dalek = { version = "2", default-features = false }
# Synchronous Postgres client for the real-PG18 `conn` seams (the lifted
# PgRehearsal / PgApplyConn / PgRevertConn). OPTIONAL — only pulled in under the
# `pg` feature, so the default DB-free build never links it. MIT/Apache (keeps
# cargo-deny green); the sync client keeps these conns linear and readable,
# matching the S0 fidelity spike.
postgres = { version = "0.19", optional = true }

[dev-dependencies]
# The integration tests drive the lifted `conn` module (PgRehearsal /
# PgApplyConn / PgRevertConn) — so they self-enable the crate's own `pg` feature
# (a dev-dep on the crate itself). This is what makes the tests reuse the ONE
# library impl rather than a second copy.
pgb-clone-orchestrator = { path = ".", features = ["pg"] }
# Synchronous Postgres client for the env-gated (PG_BUMPERS_IT=1) real-PG18
# integration tests (DB setup/teardown helpers in tests/common). MIT/Apache
# (keeps cargo-deny green); the sync client keeps the harness linear, matching
# the S0 fidelity spike.
postgres = "0.19"
# Unit/IT tests mint a signing key to sign the §14.3 grant they then verify at the
# real apply path. `rand_core` provides the OsRng `SigningKey::generate` needs;
# the `ed25519-dalek` `rand_core` feature wires the key generator. Same versions
# pgb-policy pins (no new license surface).
rand_core = { version = "0.6", features = ["getrandom"] }
# Re-declare ed25519-dalek for tests WITH the `rand_core` feature so the test
# `SigningKey::generate(&mut OsRng)` compiles (cargo unions features across the
# normal + dev dep). The library dep stays default-features = false.
ed25519-dalek = { version = "2", features = ["rand_core"] }
# The ONE shared PG18 bin-dir resolver every env-gated IT calls (issue #44), so
# the `PG_BUMPERS_PG18_BIN → PG_BUMPERS_PGBIN → Homebrew` precedence lives + is
# unit-tested in exactly one place (no per-resolver drift).
pgb-test-support = { path = "../test-support" }
