[package]
name = "pgb-core"
description = "pg_bumpers core domain types and one-way-door seams (ApplyBarrier, Clock, SessionState, BlastRadius)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
