[package]
name = "pgb-mcp"
description = "pg_bumpers MCP server: the agent-facing Model Context Protocol surface (stdio) — the §4 nine-tool catalog speaking the real protocol via the rmcp SDK. Cooperative, NOT a security boundary (SPEC §3): the floor (proxy + WALL + applyd + warden) is the real boundary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_mcp"

[[bin]]
name = "pgb-mcp"
path = "src/bin/pgb_mcp.rs"

[dependencies]
# The official Model Context Protocol Rust SDK. Features pinned to the stdio
# server surface only: `server` (the ServerHandler trait + RoleServer),
# `macros` (the model derive/serde re-exports), `transport-io` (the
# stdin/stdout AsyncRead/AsyncWrite transport so `claude mcp add … -- pgb-mcp`
# connects). This feature set pulls ONLY permissive deps (MIT / Apache-2.0 /
# Unicode-3.0) — verified against deny.toml (no GPL/AGPL). See the PR evidence.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
# The async runtime rmcp's stdio transport requires; the workspace already pins
# 1.52 (proxy/pgwire/audit), so no new major version enters the tree.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
# Structured tool I/O: the §4 block contract + the whoami result are plain JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# The test drives a REAL MCP client against the server over an in-process duplex
# pipe (initialize → tools/list → tools/call), so it needs the rmcp client side
# plus an extra tokio feature for the in-memory pipe.
rmcp = { version = "1.7", features = ["client"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
