[package]
name = "pgb-mcp"
description = "pg_bumpers MCP server: the agent-facing Model Context Protocol surface (stdio) — the §4 nine-tool catalog speaking the real protocol via the rmcp SDK. Cooperative, NOT a security boundary (SPEC §3): the floor (proxy + WALL + applyd + warden) is the real boundary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_mcp"

[[bin]]
name = "pgb-mcp"
path = "src/bin/pgb_mcp.rs"

[dependencies]
# The official Model Context Protocol Rust SDK. Features pinned to the stdio
# server surface only: `server` (the ServerHandler trait + RoleServer),
# `macros` (the model derive/serde re-exports), `transport-io` (the
# stdin/stdout AsyncRead/AsyncWrite transport so `claude mcp add … -- pgb-mcp`
# connects). This feature set pulls ONLY permissive deps (MIT / Apache-2.0 /
# Unicode-3.0) — verified against deny.toml (no GPL/AGPL). See the PR evidence.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
# The async runtime rmcp's stdio transport requires; the workspace already pins
# 1.52 (proxy/pgwire/audit), so no new major version enters the tree.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
# Structured tool I/O: the §4 block contract + the whoami result are plain JSON.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The CANONICAL Rust read-only classifier (AST-based, fail-closed, statement-
# stacking-proof). The MCP read tools REUSE `pgb_pgwire::classify` as the
# cooperative fast-path — we do NOT re-implement a classifier. The proxy enforces
# independently (the MCP classifier is a fast-path, not the boundary).
pgb-pgwire = { path = "../pgwire" }
# The §11.2 T0–T2 intent-capture schema (`IntentTiers::from_statement`) + the §11.5
# RiskEngine stub (`AllowStub` returns Allow; captured/logged only, NEVER given
# teeth). The write tools capture intent from the statement (like the proxy/applyd
# path) and surface the stub verdict in dry_run — the deterministic floor (applyd)
# is the guarantee, not this seam. REUSED, never re-implemented.
pgb-policy = { path = "../policy" }
# The async wire to the proxy's agent endpoint. The read path goes THROUGH the
# live `pgb-proxy` (the real boundary), exactly as the TS `PgProxyTransport`
# does — `tokio-postgres` (extended-protocol-only, which the proxy requires) over
# TLS (rustls/ring) or plaintext (dev only). Same versions/features the proxy's
# own integration suite already pins (cargo-deny-approved; no GPL/AGPL).
# `with-serde_json-1` maps `json`/`jsonb` columns (incl. the `EXPLAIN (FORMAT
# JSON)` "QUERY PLAN" output) to `serde_json::Value` — used to parse the plan +
# return JSON-typed read results faithfully.
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.14", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pki-types = { version = "1.9", features = ["std"] }
# `get_audit` is a READ-THROUGH to the `_meta` audit tail (it REUSES the audit
# crate's `PgSink`/record types — it does not re-implement the chain). The sync
# `postgres` client runs off the tokio runtime on a blocking task.
pgb-audit = { path = "../audit", features = ["pg"] }

[dev-dependencies]
# The test drives a REAL MCP client against the server over an in-process duplex
# pipe (initialize → tools/list → tools/call), so it needs the rmcp client side
# plus an extra tokio feature for the in-memory pipe.
rmcp = { version = "1.7", features = ["client"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net"] }
# The env-gated e2e spawns the REAL pgb-proxy in-process (TLS + SCRAM) in front
# of live PG18 and drives the read tools THROUGH it. Reuses the proxy's own
# integration harness deps (all cargo-deny-approved permissive licenses).
pgb-proxy = { path = "../proxy" }
# `pgb-policy` is a main dependency (intent capture + the RiskEngine stub); the
# e2e tests reuse it for the budget/policy fixtures too.
pgb-core = { path = "../core" }
# The env-gated write-path e2e spawns the REAL pgb-applyd binary (Unix socket) in
# front of live PG18 and drives the write tools THROUGH it. The dep makes cargo
# build the binary + set CARGO_BIN_EXE_pgb-applyd for the test to exec.
pgb-applyd = { path = "../applyd" }
postgres = "0.19"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
# The write-path e2e mints the Ed25519 approver keypair (the apply-time trust root)
# + does the operator `approve` hop OUT-of-band over the applyd socket. Same crates
# / versions the applyd IT pins (all BSD/MIT — cargo-deny-approved).
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
