[package]
name = "pgb-warden"
description = "pg_bumpers warden binary: out-of-band watchdog that kills agent-tagged runaways and owns the circuit breaker."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "pgb_warden"
path = "src/lib.rs"

[[bin]]
name = "pgb-warden"
path = "src/main.rs"

[features]
# The live PG18 seams (`PgActivitySource` / `PgKiller`) + the Postgres `_meta`
# audit sink are behind a default-on `pg` feature, so the pure gating logic +
# audit-record construction build/test without a `postgres` client when desired
# (`--no-default-features`). The shipped binary + the env-gated integration test
# (`PG_BUMPERS_IT=1`) both need this feature; it is on by default.
default = ["pg"]
pg = ["dep:postgres", "pgb-audit/pg"]

[dependencies]
pgb-core = { path = "../core" }
pgb-policy = { path = "../policy" }
# The warden now appends its enforcement actions (WARDEN_TERMINATE / BREAKER_TRIP
# / SLOT_ALARM) to the SAME `_meta` hash-chained audit log the rest of the system
# writes (SPEC §3/§4/§10.9). Default-features off here; the `pg` feature above
# turns on the audit crate's Postgres `_meta` sink in lock-step with ours.
pgb-audit = { path = "../audit", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
thiserror = "2"
# A synchronous Postgres client for the live `ActivitySource` (`pg_stat_activity`
# / `pg_replication_slots`) and `Killer` (`pg_terminate_backend`). Same MIT/Apache
# client the proxy + audit `_meta` sink use, so it adds no new license surface and
# keeps `cargo deny check` green. Feature-gated so the pure logic builds without it.
postgres = { version = "0.19", optional = true }

[dev-dependencies]
# The ONE shared PG18 bin-dir resolver every env-gated IT calls (issue #44), so
# the `PG_BUMPERS_PG18_BIN → PG_BUMPERS_PGBIN → Homebrew` precedence lives + is
# unit-tested in exactly one place (no per-resolver drift). Used by the env-gated
# `warden_it` integration test (`PG_BUMPERS_IT=1`).
pgb-test-support = { path = "../test-support" }
